--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@ main {
     left: 100%;
     transform: translateX(-100%);
     top: 100%;
+    z-index: 100;
 }
 
 .card:nth-child(2) .card__storage--left span:nth-child(1) {
