--- a/css/style.css
+++ b/css/style.css
@@ -127,8 +127,8 @@ main {
     -webkit-clip-path: polygon(100% 0%, 100% 100%, 0% 0%);
     background-color: #ffffff;
     left: 100%;
-    transform: translateX(-100%);
     top: 100%;
+    transform: translate(-100%);
     z-index: 100;
 }
 
